fix the align issue

--- a/style.css
+++ b/style.css
@@ -1,192 +1,198 @@
-body{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        background-color:rgb(250, 250, 250);
-        color: rgb(0, 0, 0);
+body {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: rgb(250, 250, 250);
+    color: rgb(0, 0, 0);
 }
 
-.nav{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
+.header1,
+.footer {
     background-color: #1f2937;
+    margin: -8px;
 }
 
-#logo{
+.nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* background-color: #1f2937; */
+    gap: 1000px;
+    padding-top: 20px;
+}
+
+#logo {
     margin-left: 5%;
-   
+
 }
 
-.link{
+.link {
     display: flex;
     flex-direction: row;
     gap: 45px;
     list-style-type: none;
     margin-right: 5%;
-    font-size: 28px;
-    
-    
+    font-size: 30px;
+
+
 }
-h1{
+
+h1 {
     font-size: 46px;
 }
 
-a{
+a {
     text-decoration: none;
-    color: black;   
+    color: rgb(255, 253, 253);
 
 }
 
-#navl{
-    padding: 10px;
-    padding-bottom: 2px;
-    border-radius: 17px;
-    outline-style: solid;
-    color: white;
-}
 
-.start{
-    
+.start {
+
     flex: 0 1 425px;
-
     display: flex;
     align-items: center;
     flex-flow: wrap;
     justify-content: center;
-    gap: 100px;
-
-    background-color: #1f2937;
+    /* gap: 100px; */
+    /* background-color: #1f2937; */
     box-sizing: border-box;
     color: #E5E7EB;
     font-size: 18px;
-    padding: 100px 16px;
+    padding: 80px 25px;
 }
 
-.wlc{
-    margin-top: 90px;
+.wlc {
+
     margin-right: 90px;
     background-color: #1f2937;
     font-size: 24px;
 
 }
 
-h3{
-    font-size:30px ;
+h3 {
+    font-size: 30px;
 }
 
-#first-image{
-    margin-left: 90px;
-    margin-top: 30px;
-
-}
-
-.btn1{
+.btn1 {
     font-size: 23px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
     background-color: rgb(237, 237, 237);
     padding: 5px;
     display: inline-block;
     font-weight: 200;
-    background-color: bisque;
-    border-radius: 12px;
-    border: none;
+    background-color: #435064;
+    border-radius: 15px;
+    border-color: #E5E7EB;
+    border-style: solid;
+    border-width: 3px;
     padding: 7px;
 }
 
-h2{
+h2 {
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     padding-top: 20px;
 }
 
-.info{
+.info {
     display: flex;
     /* flex-direction: row; */
     padding: 20px;
-    justify-content:center;  
+    justify-content: center;
     align-items: center;
     gap: 100px;
 
 }
 
-.item{
-    margin-bottom: 90px;
-    font-size: 30px;
+.item {
+    margin-bottom: 70px;
+    font-size: 25px;
     font-weight: 100;
-    text-align:center;
-    max-width: 200px;
-   
-}
-
-.quote-container{
-    font-size: 50px;
-    font-weight: 700;
-    background-color:darkgray;
     text-align: center;
-    padding: 50px;  
-    font-style: italic;
-    margin: -50px;
-    
+    max-width: 200px;
+
 }
 
-.model-container{
+.item img {
+    border: solid 7px;
+    border-radius: 17px;
+    border-color: #435064;
+    height: 150px;
+    width: 150px;
+}
+
+.quote-container {
+    background-color: darkgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+.quote {
+    /* font-size: 50px;
+    font-weight: 700;
+    font-style: italic;
+    text-align:center; */
+    font-size: 46px;
+    font-weight: lighter;
+    font-style: italic;
+    width: 1000px;
+}
+.auther{
+    text-align: right;
+}
+
+.model-container {
 
     display: flex;
     justify-content: center;
-    margin: 80px;
-    font-size: 30px;
+    margin: 90px;
 
 }
 
-.model{
+.model {
     display: flex;
-    flex-direction: row;
-    background-color:deepskyblue;
-    margin: 50px;
-    border-radius: 20px;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 25px;
-    padding: 50px;
+    background-color: #6b84a9;
+    margin: 70px;
+    border-radius: 7px;
+    justify-content: space-around;
+    border-radius: 10px;
+    padding: 30px;
+    flex-shrink: auto;
+    gap: 180px;
+    color: #E5E7EB;
 }
 
-.para{
-    margin-right: 120px;
+.para {
+    margin: 20px;
+    font-size: 30px;
+    padding: 20px;
 }
 
-.header{
-    font-size: 40px;
-    font-weight: 700;
-    margin: 10px;
+
+.btn2 button {
+    font-size: 25px;
+    color: #E5E7EB;
+    float: right;
+    margin: 20px;
+    padding: 10px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+    background-color: #6b84a9;
 }
 
-.text{
-    margin: 10px;
-}
+.footer {
 
-.btn2 button{
-  font-size: 30px;
-  text-align: right;
-  float: right;
-  margin-right:20px ;
-  margin-left: 120px;
-  border-radius: 15px;
-  border-style:solid;
-  border-width: 5px;
-  border-color: black;
-  background-color:deepskyblue;
-}
-
-.footer{
-
-    background-color: #1f2937;
+    /* background-color: #1f2937; */
     text-align: center;
-    font-size: 20px ;
+    font-size: 20px;
     color: #E5E7EB;
     margin-top: -50px;
-    padding:25px;
+    padding: 20px;
 
 }
-
-
-
